Link tags now actually links
For the sake of semantics, all <a> tags treated
as buttons are now actually <button> tags

**Changed**
* <a> tags switched to <button> tags where required
* Placeholder text for saved items removed from HTML,
  since it's added programatically already

**Fixes**
* Properly declared "tag" var
* Cleaned up <head> tag
* Changed <sidebar> to <aside>

--- a/styles.sass
+++ b/styles.sass
@@ -14,6 +14,14 @@ body
   overflow: hidden
   background: $mainBack
   font-family: 'PT Sans', sans-serif
+  
+button
+  border: none
+  background: none
+  padding: 0
+  margin: 0
+  &:focus
+    outline: none
 
 .clear
   display: block
@@ -100,11 +108,8 @@ a
     position: relative
     transform: rotate(45deg)
     background: none
-    border: none
     &:before, &:after
       background-color: #d69aa9
-    &:focus
-      outline: none
 
 #saved-item-container
   background: $sideBack
