Setting up groundwork for storing data in object
When I originally made this project last year, I thought
it would be a neat challenge to store session info in
the DOM itself. And while it was successful (storing
state notwithstanding), it doesn't allow for expansion.

**Changed**
* Introduced savedArticle object to... save articles.
* Began creating article class to handle article specific
  functions.
* Refactored article saving and clearing functions outside
  of $(document).ready()
* Brought back placeholder, seeing as inner text does not
  change. Changed from class to id.

--- a/styles.sass
+++ b/styles.sass
@@ -137,9 +137,9 @@ a
   .article-btn
     &:after
       content: "Clear"
-  .placeholder
-    text-align: center
-    font-style: italic
+#placeholder
+  text-align: center
+  font-style: italic
 
 .site-title
   text-align: center
