Introducing searchResults object to manage DOM logic
**Changed**
* SearchResults used to store and modify DOM
  elements
* Some functions use pure Javascript instead of
  jQuery, considering dropping it all together
* Various changes to ES6 (convert from var to let,
  anonymous function calls)

**Fixed**
* Synopsis shortened for saved articles, no longer
  cuts off mid-word
* #saved-items only shows a scrollbar when necessary

--- a/styles.sass
+++ b/styles.sass
@@ -126,7 +126,7 @@ a
   &:active
     background: $sideBack - 50
 #saved-items
-  overflow-y: scroll
+  overflow-y: auto
   height: 100%
 
 #placeholder
